# aadhar-solana

./: .gitignore  .mcp.json  ARCHITECTURE_ANALYSIS.md  Anchor.toml  BUILD_SUMMARY.md  CLAUDE.md  Cargo.toml  DEPLOYED_PROGRAMS.md  DEPLOYMENT_SUCCESS.md  README.md  SERVICES_STATUS.md  SETUP.md  mcp-recommendations.md  package-lock.json  package.json  tsconfig.json
.claude/agents/: api-backend-agent.md  frontend-agent.md  identity-compliance-agent.md  mobile-app-agent.md  orchestrator-agent.md  security-privacy-agent.md  solana-program-agent.md
.docs/: AGENT_COMMUNICATION.md  ANALYSIS_AND_RECOMMENDATIONS.md  API_TEST_REPORT.md  BACKEND_STATUS.md  CURRENT_ARCHITECTURE.html  README.md  SOLANA_PROGRAM_LIFECYCLE.md
.docs/analysis/: CODEBASE_ANALYSIS.md
.docs/api/: rest-api-spec.md
.docs/architecture/: data-architecture-v2.md  smart-contracts.md  system-overview.md
.docs/business/: market-analysis.md  regulatory-compliance.md
.docs/contracts/: program-interfaces.md
.docs/deployment/: production-deployment.md
.docs/development/: contributing.md  setup-guide.md
.docs/implementation/: PHASE1_SECURITY_HARDENING.md  PHASE2_COMPLIANCE.md  PHASE3_WEB_FRONTEND.md  PHASE4_PRODUCTION_READY.md
.docs/security/: privacy-controls.md  security-framework.md
.docs/ux-design/: mobile-app-wireframes.md  user-journey-flows.md
.kilocode/: mcp.json
programs/: CLAUDE.md
programs/credential-manager/: Cargo.toml
programs/credential-manager/src/: errors.rs  lib.rs  state.rs
programs/identity-registry/: Cargo.toml
programs/identity-registry/src/: errors.rs  lib.rs
programs/identity-registry/src/instructions/: mod.rs
programs/identity-registry/src/state/: mod.rs
programs/reputation-engine/: Cargo.toml
programs/reputation-engine/src/: errors.rs  lib.rs  state.rs
programs/staking-manager/: Cargo.toml
programs/staking-manager/src/: errors.rs  lib.rs  state.rs
programs/verification-oracle/: Cargo.toml
programs/verification-oracle/src/: errors.rs  lib.rs  state.rs
scripts/: README.md  build-verify-deploy.sh  deploy-local.sh  ensure-validator.sh  start-dev.sh  start-validator.sh  validate-onchain.sh
tests/: credential-manager.ts  identity-registry.ts  reputation-engine.ts  staking-manager.ts  upgrade-authority.ts  verification-oracle.ts
tests/utils/: test-helpers.ts
