[workspace]
members = [
    "programs/identity-registry",
    "programs/verification-oracle",
    "programs/credential-manager",
    "programs/reputation-engine",
    "programs/staking-manager"
]

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
