[package]
name = "credential-manager"
version = "0.1.0"
description = "Credential manager program for AadhaarChain"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "credential_manager"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
default = []

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"
identity-registry = { path = "../identity-registry", features = ["cpi"] }
