[package]
name = "reputation-engine"
version = "0.1.0"
description = "Reputation engine program for AadhaarChain"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "reputation_engine"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
default = []

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"
