[package]
name = "staking-manager"
version = "0.1.0"
description = "Staking manager program for AadhaarChain"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "staking_manager"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
default = []

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"
