[package]
name = "staking-manager"
version = "0.1.0"
description = "Staking manager program for AadhaarChain"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "staking_manager"

[features]
no-entrypoint = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
default = []

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
anchor-spl = "0.30.1"
