[package]
name = "verification-oracle"
version = "0.1.0"
description = "Verification oracle program for AadhaarChain"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "verification_oracle"

[features]
no-entrypoint = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
default = []

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"
identity-registry = { path = "../identity-registry", features = ["cpi"] }
